kubernetes/base/idc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idc
  namespace: idc
spec:
  ingressClassName: nginx
  rules:
    - host: idc.brownrook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brownrook-idc
                port:
                  number: 8080
